--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "number26",
   "version": "0.0.4",
-  "description": "",
+  "description": "Un-official node.js module for interact with your number26 account",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha tests/index.js",
+    "test": "istanbul cover _mocha tests/index.js && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "test-unmock": "_mocha -b tests/unmock.js",
     "lint": "eslint *.js lib/* tests/*",
     "docs": "jsdoc -c .jsdoc.json -R README.md"
@@ -20,8 +20,16 @@
   "engines": {
     "node": ">=4.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PierrickP/number26"
+  },
+  "bugs": {
+    "url": "https://github.com/PierrickP/number26/issues"
+  },
   "devDependencies": {
     "chai": "^3.2.0",
+    "coveralls": "^2.11.9",
     "dirty-chai": "^1.2.2",
     "docdash": "^0.3.0",
     "eslint": "^2.8.0",
