--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "rules": {
     "comma-dangle": [1, "never"],
     "object-curly-spacing": ["error", "never"],
+    "no-param-reassign": "off",
     "strict": "off"
   },
   "env": {
