--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Un-official node.js module for interact with your number26 account",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha tests/index.js && if [[ $CONTINUOUS_INTEGRATION == \"true\" ]]; then cat ./coverage/lcov.info | ./node_modules/.bin/coveralls; fi",
+    "test": "istanbul cover _mocha tests/index.js && if [ \"$CONTINUOUS_INTEGRATION\" = \"true\" ]; then cat ./coverage/lcov.info | ./node_modules/.bin/coveralls; fi",
     "test-unmock": "_mocha -b tests/unmock.js",
     "lint": "eslint *.js lib/* tests/*; exit 0",
     "docs": "jsdoc -c .jsdoc.json -R README.md",
-    "deployDocs": "npm run docs && ./scripts/deployDocs.sh"
+    "deployDocs": "npm run docs && sh ./scripts/deployDocs.sh"
   },
   "keywords": [
     "number26",
