--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "chai": "^3.2.0",
     "coveralls": "^2.11.9",
     "dirty-chai": "^1.2.2",
-    "docdash": "^0.3.0",
+    "docdash": "^0.4.0",
     "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
+    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.5.0",
     "istanbul": "^0.4.2",
     "jsdoc": "^3.4.0",
