--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "moment": "^2.15.0",
+    "node-rsa": "^0.3.2",
     "request": "^2.74.0",
     "request-promise": "^4.1.0"
   }
