--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "number26",
-  "version": "1.2.0",
-  "description": "Un-official node.js module for interact with your number26 account",
+  "name": "n26",
+  "version": "1.3.0",
+  "description": "Un-official node.js module for interact with your N26 (previously Number26) account",
   "main": "index.js",
   "scripts": {
     "test": "istanbul cover _mocha tests/index.js && if [ \"$CONTINUOUS_INTEGRATION\" = \"true\" ]; then cat ./coverage/lcov.info | ./node_modules/.bin/coveralls; fi",
@@ -11,6 +11,7 @@
     "deployDocs": "npm run docs && sh ./scripts/deployDocs.sh"
   },
   "keywords": [
+    "n26",
     "number26",
     "bank",
     "es6",
@@ -23,10 +24,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PierrickP/number26"
+    "url": "https://github.com/PierrickP/n26"
   },
   "bugs": {
-    "url": "https://github.com/PierrickP/number26/issues"
+    "url": "https://github.com/PierrickP/n26/issues"
   },
   "devDependencies": {
     "chai": "^3.2.0",
