--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,14 @@
 {
   "rules": {
-    "comma-dangle": [1, "never"],
-    "object-curly-spacing": ["error", "never"],
-    "no-param-reassign": "off",
-    "strict": "off"
+    "semi": ["error", "always"],
+
+    // ES6
+    "arrow-body-style": ["error", "as-needed"],
+    "arrow-parens": ["error", "as-needed"],
   },
   "env": {
     "es6": true,
     "node": true
   },
-  "extends": "airbnb-base"
+  "extends": ["eslint:recommended"]
 }
