--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,8 @@
 {
   "rules": {
     "semi": ["error", "always"],
-
-    // ES6
     "arrow-body-style": ["error", "as-needed"],
-    "arrow-parens": ["error", "as-needed"],
+    "arrow-parens": ["error", "as-needed"]
   },
   "env": {
     "es6": true,
